fixes missing metastation collapse symbol in filter table
ticket: #568

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,7 +78,7 @@ mat-form-field.less-bottom-padding {
     }
 }
 
-.fcl-datatable {
+.fcl-datatable .datatable-header-cell {
     // switch of default sort icons
     .datatable-icon-up::before {
         content: "";
